User-friendly interface, basic functionality of text editor added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.28)
 project(illText)
 
+set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -15,7 +17,8 @@ find_package(Qt6 COMPONENTS
 add_executable(illText main.cpp
         illtext.cpp
         illtext.h
-        illtext.ui)
+        illtext.ui
+)
 target_link_libraries(illText
         Qt::Core
         Qt::Gui
